--- a/2_Travel_agency_database_challenge.ipynb
+++ b/2_Travel_agency_database_challenge.ipynb
@@ -30,33 +30,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ik_kR7FWtYOi"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "XzQtZx6jtYb1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "18GKa4bmtYpG"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "OXuaW1Ey74eO"
@@ -92,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T12:05:25.732492Z",
@@ -122,9 +95,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "79876f19-029a-4764-9f2a-f7beda20ec8a"
+        "outputId": "355648df-e404-4973-efc4-9339270aef0c"
       },
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -137,7 +110,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 55
         }
       ]
     },
@@ -152,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T12:06:24.177504Z",
@@ -162,7 +135,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ccabcd49-629c-4683-97d2-f83cd1ce4cc1"
+        "outputId": "874b78ca-ed13-460e-d172-d26537d20484"
       },
       "outputs": [
         {
@@ -173,7 +146,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 56
         }
       ],
       "source": [
@@ -194,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 57,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T12:42:33.033047Z",
@@ -204,7 +177,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "57564462-fabd-4374-8b83-792767bb4720"
+        "outputId": "0031f4ba-285e-43e9-c29b-84751753152a"
       },
       "outputs": [
         {
@@ -215,7 +188,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 57
         }
       ],
       "source": [
@@ -234,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T12:42:56.775228Z",
@@ -244,7 +217,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ca12a46e-41e5-4f88-d923-331af743552b"
+        "outputId": "dfd98376-43cf-43d4-cc0a-ef44b870bc99"
       },
       "outputs": [
         {
@@ -255,7 +228,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 58
         }
       ],
       "source": [
@@ -329,7 +302,7 @@
         "  # HINT: you will want to assign this output to a variable so we can return it at the end\n",
         "  if key not in city.keys():\n",
         "    #city_key_value = key + \" in \" + city['name'] + ' not defined'\n",
-        "    city_key_value = key + ' not definfed'\n",
+        "    #city_key_value = key + ' not definfed'\n",
         "    city_key_value = f'{key} not defined'\n",
         "\n",
         "  # here you should define what the function should output if the key DOES exist for the selected city\n",
@@ -347,7 +320,7 @@
       "metadata": {
         "id": "JC3BfskSe5lE"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -371,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T15:25:12.742813Z",
@@ -381,14 +354,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2eebf490-a5ce-44e2-b585-9e1a960282bd"
+        "outputId": "b51f48ff-1ec5-4852-ebf3-ac1625a2a5ec"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "total_number not definfed\n"
+            "total_number not defined\n"
           ]
         }
       ],
@@ -427,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T17:01:09.847504Z",
@@ -488,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T13:11:20.949462Z",
@@ -498,7 +471,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e8eddd56-e146-467e-986e-d04e5c2b3df8"
+        "outputId": "303e3f71-9456-4a26-c767-4c42a0a3a2f6"
       },
       "outputs": [
         {
@@ -515,12 +488,26 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(cities[1]['name'])"
+      ],
       "metadata": {
-        "id": "V7-LMmxkPW94"
+        "id": "V7-LMmxkPW94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9c835fa4-02bd-4b41-9fb1-b04437f8c091"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Xi’an\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -547,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T17:01:13.576168Z",
@@ -557,14 +544,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "023344ec-c964-45ff-b0da-8d6ad0014e97"
+        "outputId": "7e2d6eef-f5da-4d11-beb1-3cc176fcc4ac"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "total_populatio not definfed\n"
+            "12328000\n"
           ]
         }
       ],
@@ -572,27 +559,26 @@
         "# create the function with the selected arguments\n",
         "def retrieve_city_key_value_database(city_name, key):\n",
         "\n",
-        "  # to be completed\n",
+        "\n",
         "  # set default output\n",
         "    city_key_value = city_name + \" doesn't exist or is not covered\"\n",
         "\n",
-        "  # to be completed\n",
+        "\n",
         "  # start the loop over cities\n",
+        "     # set the output if the required key exists in the selected city\n",
+        "     # set a new varible 'city' for the loop function\n",
+        "     # each 'city' = a dic item {}\n",
         "    for city in cities:\n",
         "      if city['name'] == city_name:\n",
         "        city_key_value = get_key_value_from_city(city, key)\n",
         "        break\n",
-        "    # to be completed\n",
-        "    # set the output if the required key exists in the selected city\n",
         "\n",
-        "\n",
-        "  # to be completed\n",
         "  # return the output\n",
         "    return city_key_value\n",
         "\n",
-        "# to be completed\n",
+        "\n",
         "# test the function with examples\n",
-        "print(retrieve_city_key_value_database(city_name=\"Paris\", key='total_populatio'))"
+        "print(retrieve_city_key_value_database(city_name=\"Xi’an\", key='total_population'))"
       ]
     },
     {
@@ -624,7 +610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T17:02:08.090675Z",
@@ -634,14 +620,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d4572918-01e0-469c-e465-46147d82ae65"
+        "outputId": "80b4785c-de75-47eb-a803-8e310a0f79d9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "None\n"
+            "total_population has been updated for Paris\n",
+            "{'name': 'Paris', 'total_population': '2102654', 'continent': 'Europe', 'location': [48.8566, 2.3522], 'area': {'prefecture_level': 105.4}}\n"
           ]
         }
       ],
@@ -650,26 +637,60 @@
         "\n",
         "def modify_city_key_value(city_name, key, value):\n",
         "\n",
-        "  # to be completed\n",
+        "\n",
         "  # set default output\n",
         "    city_key_value = city_name + \" doesn't exist or is not covered\"\n",
         "\n",
-        "  # to be completed\n",
         "  # start the loop over cities\n",
         "    for city in cities:\n",
         "      if city['name'] == city_name:\n",
-        "        city_key_value = get_key_value_from_city(city, key)\n",
-        "      continue\n",
-        "      if key == city.keys:\n",
-        "        print=('key has been updated for city')\n",
+        "    # set the different outputs depending on whether the key exists\n",
+        "    # The .keys() function returns the list of dictionary keys\n",
+        "        if key in city.keys():\n",
+        "          # assign new value to the key\n",
+        "          city[key] = value\n",
+        "          # assign updated city dictionary to city_key_value\n",
+        "          city_key_value = city\n",
+        "          print(key + ' has been updated for ' + city_name)\n",
+        "        else:\n",
+        "          city_key_value = \"key doesn't exist\"\n",
         "      break\n",
         "\n",
-        "    # to be completed\n",
-        "    # set the different outputs depending on whether the key exists\n",
+        "    # return the output\n",
+        "    return city_key_value\n",
         "\n",
-        "# to be completed\n",
         "# test the function with examples\n",
-        "print(modify_city_key_value('Paris', 'total_population', '2102651'))"
+        "print(modify_city_key_value('Paris', 'total_population', '2102654'))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cities[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Sm6hIfA4L-3H",
+        "outputId": "6dfcfbc8-1d13-4de5-fd89-c49b4a87a6b7"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'name': 'Paris',\n",
+              " 'total_population': '2102654',\n",
+              " 'continent': 'Europe',\n",
+              " 'location': [48.8566, 2.3522],\n",
+              " 'area': {'prefecture_level': 105.4}}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
       ]
     },
     {
@@ -714,15 +735,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T16:51:02.878914Z",
           "start_time": "2024-02-13T16:51:00.886496Z"
         },
-        "id": "d9Y-n4mUlL2Q"
+        "id": "d9Y-n4mUlL2Q",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a9462817-3eef-46ac-cf95-8c4b91f484e1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: geopy in /usr/local/lib/python3.10/dist-packages (2.4.1)\n",
+            "Requirement already satisfied: geographiclib<3,>=1.52 in /usr/local/lib/python3.10/dist-packages (from geopy) (2.0)\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install geopy\n",
         "from geopy import distance"
@@ -730,15 +764,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T16:51:02.884463Z",
           "start_time": "2024-02-13T16:51:02.881122Z"
         },
-        "id": "KwgQBpZcXWux"
+        "id": "KwgQBpZcXWux",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6e991490-f885-4296-c6db-edac38cdfe15"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "866.4554329098685\n"
+          ]
+        }
+      ],
       "source": [
         "newport_ri = [41.49008, -71.312796]\n",
         "cleveland_oh = [41.499498, -81.695391]\n",
@@ -757,7 +803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T16:52:26.290763Z",
@@ -822,7 +868,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T17:09:40.187832Z",
@@ -849,7 +895,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
