--- a/2_Travel_agency_database_challenge.ipynb
+++ b/2_Travel_agency_database_challenge.ipynb
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 2,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T12:05:25.732492Z",
@@ -95,9 +95,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "355648df-e404-4973-efc4-9339270aef0c"
+        "outputId": "0dc9e871-6682-4c20-dbc7-8b8940334a71"
       },
-      "execution_count": 55,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -110,7 +110,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 3
         }
       ]
     },
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 4,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T12:06:24.177504Z",
@@ -135,7 +135,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "874b78ca-ed13-460e-d172-d26537d20484"
+        "outputId": "e8dd8be0-12fc-4b53-c68b-d188024fdff9"
       },
       "outputs": [
         {
@@ -146,7 +146,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 4
         }
       ],
       "source": [
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 5,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T12:42:33.033047Z",
@@ -177,7 +177,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0031f4ba-285e-43e9-c29b-84751753152a"
+        "outputId": "da9d04da-6011-4837-b15e-1537e0da08ca"
       },
       "outputs": [
         {
@@ -188,7 +188,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 5
         }
       ],
       "source": [
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 6,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T12:42:56.775228Z",
@@ -217,7 +217,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dfd98376-43cf-43d4-cc0a-ef44b870bc99"
+        "outputId": "9d707d32-dd51-4e85-b4d9-d7f6fc4f30c1"
       },
       "outputs": [
         {
@@ -228,7 +228,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 6
         }
       ],
       "source": [
@@ -320,7 +320,7 @@
       "metadata": {
         "id": "JC3BfskSe5lE"
       },
-      "execution_count": 59,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -344,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 8,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T15:25:12.742813Z",
@@ -354,7 +354,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b51f48ff-1ec5-4852-ebf3-ac1625a2a5ec"
+        "outputId": "f9f4d90a-77ef-419c-c244-a679630c7199"
       },
       "outputs": [
         {
@@ -400,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 9,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T17:01:09.847504Z",
@@ -461,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 10,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T13:11:20.949462Z",
@@ -471,7 +471,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "303e3f71-9456-4a26-c767-4c42a0a3a2f6"
+        "outputId": "9b7c3f2d-e3ff-44ff-b7e4-5c93b4858913"
       },
       "outputs": [
         {
@@ -496,9 +496,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9c835fa4-02bd-4b41-9fb1-b04437f8c091"
+        "outputId": "f2f2a4df-1f61-4999-90fc-56212e897b01"
       },
-      "execution_count": 63,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 12,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T17:01:13.576168Z",
@@ -544,7 +544,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7e2d6eef-f5da-4d11-beb1-3cc176fcc4ac"
+        "outputId": "1a66029c-72e1-4eb0-f5a7-2bf88e22676c"
       },
       "outputs": [
         {
@@ -610,7 +610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 13,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T17:02:08.090675Z",
@@ -620,7 +620,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "80b4785c-de75-47eb-a803-8e310a0f79d9"
+        "outputId": "45645b60-a347-4012-a335-53cee4d8ecca"
       },
       "outputs": [
         {
@@ -628,7 +628,7 @@
           "name": "stdout",
           "text": [
             "total_population has been updated for Paris\n",
-            "{'name': 'Paris', 'total_population': '2102654', 'continent': 'Europe', 'location': [48.8566, 2.3522], 'area': {'prefecture_level': 105.4}}\n"
+            "{'name': 'Paris', 'total_population': '2102655', 'continent': 'Europe', 'location': [48.8566, 2.3522], 'area': {'prefecture_level': 105.4}}\n"
           ]
         }
       ],
@@ -660,7 +660,7 @@
         "    return city_key_value\n",
         "\n",
         "# test the function with examples\n",
-        "print(modify_city_key_value('Paris', 'total_population', '2102654'))"
+        "print(modify_city_key_value('Paris', 'total_population', '2102655'))"
       ]
     },
     {
@@ -673,23 +673,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sm6hIfA4L-3H",
-        "outputId": "6dfcfbc8-1d13-4de5-fd89-c49b4a87a6b7"
+        "outputId": "642f2a9d-4f84-42bf-bc0b-31dc4d3bd6d8"
       },
-      "execution_count": 77,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "{'name': 'Paris',\n",
-              " 'total_population': '2102654',\n",
+              " 'total_population': '2102655',\n",
               " 'continent': 'Europe',\n",
               " 'location': [48.8566, 2.3522],\n",
               " 'area': {'prefecture_level': 105.4}}"
             ]
           },
           "metadata": {},
-          "execution_count": 77
+          "execution_count": 14
         }
       ]
     },
@@ -735,7 +735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 15,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T16:51:02.878914Z",
@@ -745,26 +745,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a9462817-3eef-46ac-cf95-8c4b91f484e1"
+        "outputId": "5d57db1d-46be-4e07-e38f-cba6d3cb26c7"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: geopy in /usr/local/lib/python3.10/dist-packages (2.4.1)\n",
-            "Requirement already satisfied: geographiclib<3,>=1.52 in /usr/local/lib/python3.10/dist-packages (from geopy) (2.0)\n"
+            "Requirement already satisfied: geopy in /usr/local/lib/python3.11/dist-packages (2.4.1)\n",
+            "Requirement already satisfied: geographiclib<3,>=1.52 in /usr/local/lib/python3.11/dist-packages (from geopy) (2.0)\n"
           ]
         }
       ],
       "source": [
         "!pip install geopy\n",
-        "from geopy import distance"
+        "from geopy import distance\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 16,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T16:51:02.884463Z",
@@ -774,7 +774,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6e991490-f885-4296-c6db-edac38cdfe15"
+        "outputId": "6cb483e9-45ba-477c-dc52-7b71a0dbf334"
       },
       "outputs": [
         {
@@ -803,17 +803,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 17,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T16:52:26.290763Z",
           "start_time": "2024-02-13T16:52:26.265873Z"
         },
-        "id": "AneA6YqQHXrF"
+        "id": "AneA6YqQHXrF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b37166b6-3483-4529-8f72-616bb5b0221f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tuple"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ],
       "source": [
-        "#your code here"
+        "tuple"
       ]
     },
     {
@@ -868,17 +883,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 25,
       "metadata": {
         "ExecuteTime": {
           "end_time": "2024-02-13T17:09:40.187832Z",
           "start_time": "2024-02-13T17:09:40.172012Z"
         },
-        "id": "Gt9JDf46PRqb"
+        "id": "Gt9JDf46PRqb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e2ea725a-d58c-4842-b62a-18f785d4807a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Xi’an', 'Chengdu']\n"
+          ]
+        }
+      ],
       "source": [
-        "# create the function with the selected arguments"
+        "# create the get_cities_neary function with 2 arguments cutomer_location and radius\n",
+        "\n",
+        "# 1. import the Nominatim modul from geopy.geocoders\n",
+        "# from geopy.geocoders import Nominatim\n",
+        "\n",
+        "def get_cities_nearby(customer_location, radius):\n",
+        "\n",
+        "# create an empty list as default output\n",
+        "    cities_nearby = []\n",
+        "\n",
+        "# start the loop over cities\n",
+        "# create a new variable city for the loop\n",
+        "    for city in cities:\n",
+        "# if city is in the radius\n",
+        "      if distance.distance(customer_location, city['location']).km <= radius:\n",
+        "        cities_nearby.append(city['name'])\n",
+        "\n",
+        "    return cities_nearby\n",
+        "\n",
+        "Guangyang = [32.4355, 105.8436]\n",
+        "print(get_cities_nearby(Guangyang, 500))"
       ]
     },
     {
